--- a/src/app/invoice/invoice.component.html
+++ b/src/app/invoice/invoice.component.html
@@ -13,12 +13,12 @@
               <div class="col-lg-2"></div>
             </div>
             <div *ngFor="let i of history; let idx = index" class="row add-items table-items">
-              <div class="col-lg-1">{{idx +1 }}</div>
+              <div class="col-lg-1">{{ i.invoiceNumber }}</div>
               <div class="col-lg-3">{{i.invoicer.firstname}} {{i.invoicer.lastname}}</div>
               <div class="col-lg-3">{{i.invoiced.firstname}}</div>
               <div class="col-lg-2">{{i.invoiced.vat}}</div>
               <div class="col-lg-2" *ngIf="!i.status && i.status != 0"></div>
-              <div class="col-lg-2" *ngIf="i.status == 0"><span class="inv-status open-status">open</span></div>              
+              <div class="col-lg-2" *ngIf="i.status == 0"><span class="inv-status open-status">open</span></div>
               <div class="col-lg-2" *ngIf="i.status == 1"><span class="inv-status ready-status">ready</span></div>
               <div class="col-lg-2" *ngIf="i.status == 2"><span class="inv-status close-status">closed</span></div>
               <div class="col-lg-1">
