--- a/src/app/settings/settings.component.html
+++ b/src/app/settings/settings.component.html
@@ -5,6 +5,14 @@
       <label for="currentInvoiceNumber">Current invoice number</label>
       <input  id="currentInvoiceNumber" type="number" [(ngModel)]="settings.currentInvoiceNumber">
     </div>
+    <div class="col-lg-12" *ngIf="settings">
+      <label for="currentRate">Current rate</label>
+      <input  id="currentRate" type="number" [(ngModel)]="settings.currentRate">
+    </div>
+    <div class="col-lg-12" *ngIf="settings">
+      <label for="currentVatRate">Current VAT rate</label>
+      <input  id="currentVatRate" type="number" [(ngModel)]="settings.currentVatRate">
+    </div>
     <div class="col-lg-12">
       <button type="button" class="btn btn-outline-dark" (click)="save()">Save</button>
     </div>
