--- a/src/app/invoiceprofile/invoiceprofile.component.html
+++ b/src/app/invoiceprofile/invoiceprofile.component.html
@@ -43,17 +43,17 @@
       <div class="col-lg-4">
         <fieldset>
           <legend>General</legend>
-          <div class="col-lg-12"><label>Firsname </label><input type="text" [(ngModel)]="newInvoiceProfile.firstname"></div>
-          <div class="col-lg-12"><label>Lastname </label><input type="text" [(ngModel)]="newInvoiceProfile.lastname"></div>
-          <div class="col-lg-12"><label>Mail </label><input type="email" [(ngModel)]="newInvoiceProfile.mail"></div>
-          <div class="col-lg-12"><label>Phone </label><input type="text" [(ngModel)]="newInvoiceProfile.phoneNumber"></div>
-          <div class="col-lg-12"><label>VAT </label><input type="text" [(ngModel)]="newInvoiceProfile.vat"></div>
-          <div class="col-lg-12"><label>Account N° </label><input type="text" [(ngModel)]="newInvoiceProfile.accountNumber"></div>
+          <div class="col-lg-12"><label>Firsname </label><input class="form-control" type="text" [(ngModel)]="newInvoiceProfile.firstname"></div>
+          <div class="col-lg-12"><label>Lastname </label><input class="form-control" type="text" [(ngModel)]="newInvoiceProfile.lastname"></div>
+          <div class="col-lg-12"><label>Mail </label><input class="form-control" type="email" [(ngModel)]="newInvoiceProfile.mail"></div>
+          <div class="col-lg-12"><label>Phone </label><input class="form-control" type="text" [(ngModel)]="newInvoiceProfile.phoneNumber"></div>
+          <div class="col-lg-12"><label>VAT </label><input class="form-control" type="text" [(ngModel)]="newInvoiceProfile.vat"></div>
+          <div class="col-lg-12"><label>Account N° </label><input class="form-control" type="text" [(ngModel)]="newInvoiceProfile.accountNumber"></div>
           <div class="col-lg-12 form-check-inline">
-            <input class="form-check-input" id="activeProfile" type="checkbox" [(ngModel)]="newInvoiceProfile.active">
-            <label class="form-check-label" for="activeProfile">active profile?</label>
-            <input class="form-check-input" id="isCustomer" type="checkbox" [(ngModel)]="newInvoiceProfile.customer">
-            <label class="form-check-label" for="isCustomer">customer profile?</label>
+            <input class="form-check-input" id="newActiveProfile" type="checkbox" [(ngModel)]="newInvoiceProfile.active">
+            <label class="form-check-label" for="newActiveProfile">active profile?</label>
+            <input class="form-check-input" id="isNewCustomer" type="checkbox" [(ngModel)]="newInvoiceProfile.customer">
+            <label class="form-check-label" for="isNewCustomer">customer profile?</label>
           </div>
         </fieldset>
       </div>
@@ -61,11 +61,11 @@
         <fieldset>
           <legend>Address</legend>
           
-          <div class="col-lg-12"><label>Street </label><input type="text" [(ngModel)]="newInvoiceProfile.address.street"></div>
-          <div class="col-lg-12"><label>N° </label><input type="text" [(ngModel)]="newInvoiceProfile.address.streetNumber"></div>
-          <div class="col-lg-12"><label>City </label><input type="text" [(ngModel)]="newInvoiceProfile.address.city"></div>
-          <div class="col-lg-12"><label>Postcode </label><input type="text" [(ngModel)]="newInvoiceProfile.address.postcode"></div>
-          <div class="col-lg-12"><label>Country </label><input type="text" [(ngModel)]="newInvoiceProfile.address.country"></div>
+          <div class="col-lg-12"><label>Street </label><input class="form-control" type="text" [(ngModel)]="newInvoiceProfile.address.street"></div>
+          <div class="col-lg-12"><label>N° </label><input class="form-control" type="text" [(ngModel)]="newInvoiceProfile.address.streetNumber"></div>
+          <div class="col-lg-12"><label>City </label><input class="form-control" type="text" [(ngModel)]="newInvoiceProfile.address.city"></div>
+          <div class="col-lg-12"><label>Postcode </label><input class="form-control" type="text" [(ngModel)]="newInvoiceProfile.address.postcode"></div>
+          <div class="col-lg-12"><label>Country </label><input class="form-control" type="text" [(ngModel)]="newInvoiceProfile.address.country"></div>
         </fieldset>
       </div>
       <div class="col-lg-4">
@@ -108,17 +108,17 @@
         <fieldset>
           <legend>General</legend>
   
-          <div class="col-lg-12"><label>Firsname </label><input type="text" [(ngModel)]="currentProfile.firstname"></div>
-          <div class="col-lg-12"><label>Lastname </label><input type="text" [(ngModel)]="currentProfile.lastname"></div>
-          <div class="col-lg-12"><label>Mail </label><input type="mail" [(ngModel)]="currentProfile.mail"></div>
-          <div class="col-lg-12"><label>Phone </label><input type="text" [(ngModel)]="currentProfile.phoneNumber"></div>
-          <div class="col-lg-12"><label>VAT </label><input type="text" [(ngModel)]="currentProfile.vat"></div>
-          <div class="col-lg-12"><label>Account N° </label><input type="text" [(ngModel)]="currentProfile.accountNumber"></div>
+          <div class="col-lg-12"><label>Firsname </label><input class="form-control" type="text" [(ngModel)]="currentProfile.firstname"></div>
+          <div class="col-lg-12"><label>Lastname </label><input class="form-control" type="text" [(ngModel)]="currentProfile.lastname"></div>
+          <div class="col-lg-12"><label>Mail </label><input class="form-control" type="mail" [(ngModel)]="currentProfile.mail"></div>
+          <div class="col-lg-12"><label>Phone </label><input class="form-control" type="text" [(ngModel)]="currentProfile.phoneNumber"></div>
+          <div class="col-lg-12"><label>VAT </label><input class="form-control" type="text" [(ngModel)]="currentProfile.vat"></div>
+          <div class="col-lg-12"><label>Account N° </label><input class="form-control" type="text" [(ngModel)]="currentProfile.accountNumber"></div>
           <div class="col-lg-12 form-check-inline">
-            <input class="form-check-input" id="activeProfile" type="checkbox" [(ngModel)]="currentProfile.active">
-            <label class="form-check-label" for="activeProfile">active profile?</label>
-            <input class="form-check-input" id="isCustomer" type="checkbox" [(ngModel)]="currentProfile.customer">
-            <label class="form-check-label" for="isCustomer">customer profile?</label>
+            <input class="form-check-input" id="editActiveProfile" type="checkbox" [(ngModel)]="currentProfile.active">
+            <label class="form-check-label" for="editActiveProfile">active profile?</label>
+            <input class="form-check-input" id="isEditCustomer" type="checkbox" [(ngModel)]="currentProfile.customer">
+            <label class="form-check-label" for="isEditCustomer">customer profile?</label>
           </div>
 
         </fieldset>
@@ -127,11 +127,11 @@
         <fieldset>
           <legend>Address</legend>
           
-          <div class="col-lg-12"><label>Street </label><input type="text" [(ngModel)]="currentProfile.address.street"></div>
-          <div class="col-lg-12"><label>N° </label><input type="text" [(ngModel)]="currentProfile.address.streetNumber"></div>
-          <div class="col-lg-12"><label>City </label><input type="text" [(ngModel)]="currentProfile.address.city"></div>
-          <div class="col-lg-12"><label>Postcode </label><input type="text" [(ngModel)]="currentProfile.address.postcode"></div>
-          <div class="col-lg-12"><label>Country </label><input type="text" [(ngModel)]="currentProfile.address.country"></div>
+          <div class="col-lg-12"><label>Street </label><input class="form-control" type="text" [(ngModel)]="currentProfile.address.street"></div>
+          <div class="col-lg-12"><label>N° </label><input class="form-control" type="text" [(ngModel)]="currentProfile.address.streetNumber"></div>
+          <div class="col-lg-12"><label>City </label><input class="form-control" type="text" [(ngModel)]="currentProfile.address.city"></div>
+          <div class="col-lg-12"><label>Postcode </label><input class="form-control" type="text" [(ngModel)]="currentProfile.address.postcode"></div>
+          <div class="col-lg-12"><label>Country </label><input class="form-control" type="text" [(ngModel)]="currentProfile.address.country"></div>
         </fieldset>
       </div>
       <div class="col-lg-4">
